; ModuleID = '/home/carl/AnghaBench/sumatrapdf/ext/unarr/rar/extr_filter-rar.c_br_bits.c'
source_filename = "/home/carl/AnghaBench/sumatrapdf/ext/unarr/rar/extr_filter-rar.c_br_bits.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.MemBitReader = type { i32, i32, i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.MemBitReader*, i32)* @br_bits to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @br_bits(%struct.MemBitReader* %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.MemBitReader*, align 8
  %5 = alloca i32, align 4
  store %struct.MemBitReader* %0, %struct.MemBitReader** %4, align 8
  store i32 %1, i32* %5, align 4
  %6 = load i32, i32* %5, align 4
  %7 = load %struct.MemBitReader*, %struct.MemBitReader** %4, align 8
  %8 = getelementptr inbounds %struct.MemBitReader, %struct.MemBitReader* %7, i32 0, i32 0
  %9 = load i32, i32* %8, align 8
  %10 = icmp sgt i32 %6, %9
  br i1 %10, label %11, label %22

11:                                               ; preds = %2
  %12 = load %struct.MemBitReader*, %struct.MemBitReader** %4, align 8
  %13 = getelementptr inbounds %struct.MemBitReader, %struct.MemBitReader* %12, i32 0, i32 2
  %14 = load i64, i64* %13, align 8
  %15 = icmp ne i64 %14, 0
  br i1 %15, label %21, label %16

16:                                               ; preds = %11
  %17 = load %struct.MemBitReader*, %struct.MemBitReader** %4, align 8
  %18 = load i32, i32* %5, align 4
  %19 = call i32 @br_fill(%struct.MemBitReader* %17, i32 %18)
  %20 = icmp ne i32 %19, 0
  br i1 %20, label %22, label %21

21:                                               ; preds = %16, %11
  store i32 0, i32* %3, align 4
  br label %36

22:                                               ; preds = %16, %2
  %23 = load %struct.MemBitReader*, %struct.MemBitReader** %4, align 8
  %24 = getelementptr inbounds %struct.MemBitReader, %struct.MemBitReader* %23, i32 0, i32 1
  %25 = load i32, i32* %24, align 4
  %26 = load i32, i32* %5, align 4
  %27 = load %struct.MemBitReader*, %struct.MemBitReader** %4, align 8
  %28 = getelementptr inbounds %struct.MemBitReader, %struct.MemBitReader* %27, i32 0, i32 0
  %29 = load i32, i32* %28, align 8
  %30 = sub nsw i32 %29, %26
  store i32 %30, i32* %28, align 8
  %31 = ashr i32 %25, %30
  %32 = load i32, i32* %5, align 4
  %33 = shl i32 1, %32
  %34 = sub nsw i32 %33, 1
  %35 = and i32 %31, %34
  store i32 %35, i32* %3, align 4
  br label %36

36:                                               ; preds = %22, %21
  %37 = load i32, i32* %3, align 4
  ret i32 %37
}

declare dso_local i32 @br_fill(%struct.MemBitReader*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
